--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,11 @@
     <string name="action_settings">Settings</string>
 
     <string name="menu_home">Home</string>
-    <string name="menu_gallery">Gallery</string>
-    <string name="menu_slideshow">Slideshow</string>
+    <string name="menu_favoritos">Favoritos</string>
+    <string name="menu_filtrarGasolineras">Filtrar Gasolineras</string>
+    <string name="menu_vehiculos">Mis Vehiculos</string>
+    <string name="menu_ubicaciones">Mis Ubicaciones</string>
+    <string name="menu_historicoRepostaje">Historico de Repostaje</string>
+    <string name="menu_settings">Settings</string>
+    <string name="menu_adicional">Adicional</string>
 </resources>
